--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
                     android:elevation="5dp"
                     android:padding="20dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/logo2"
+                    android:src="@drawable/logo"
                     app:civ_border_color="#FFFFFFFF"
                     app:civ_border_width="3dp" />
 
