--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashActivity">
-<RelativeLayout
 
-    android:id="@+id/one"
-    android:layout_width="match_parent"
-    android:layout_height="300dp">
 
-</RelativeLayout>
-    <RelativeLayout
-        android:layout_below="@+id/one"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:clickable="true"
+        <de.hdodenhof.circleimageview.CircleImageView
             app:civ_border_width="3dp"
             app:civ_border_color="#FFFFFFFF"
             android:id="@+id/profilePicture"
@@ -28,24 +17,35 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
 
-            android:layout_marginTop="130dp"
+
             android:elevation="5dp"
             android:padding="20dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo"
+
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textColor="@color/colorGreen"
 
+            android:textColor="@color/colorPrimary"
             android:layout_below="@+id/profilePicture"
             android:layout_centerHorizontal="true"
 
             android:textSize="20dp"
             android:textStyle="bold"
-            android:id="@+id/name"/>
+            android:id="@+id/name"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profilePicture"/>
+
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,9 +53,24 @@
             android:textSize="10sp"
             android:layout_below="@+id/name"
             android:text="@string/not_available"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorBlack"
             android:layout_centerHorizontal="true"
-            />
-    </RelativeLayout>
 
-</RelativeLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    <ImageView
+        android:id="@+id/image_splash"
+        android:layout_width="100dp"
+        android:layout_height="200dp"
+
+
+        android:background="@drawable/splash_image_0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
