--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -27,12 +27,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
+        android:text="@string/na"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:text="@string/na"
+       />
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_user_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/na"
+        android:gravity="right"
+        android:textSize="10sp"
+
+        />
 </LinearLayout>
