--- a/app/src/main/res/layout/row_item_buyers.xml
+++ b/app/src/main/res/layout/row_item_buyers.xml
@@ -5,12 +5,14 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_margin="5dp"
-    app:cardCornerRadius="10dp"
-    app:strokeWidth="1dp"
-    app:cardElevation="2dp">
+    android:backgroundTint="@color/colorPrimary"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="4dp"
+    app:strokeWidth="0.5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginStart="3dp"
+        android:background="@color/conversation_list_item_back_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
