--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilePicture"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:elevation="5dp"
         android:padding="20dp"
@@ -35,7 +35,7 @@
 
         android:text="@string/app_name"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
+        android:textSize="15sp"
 
 
 
@@ -125,6 +125,7 @@ android:layout_margin="10dp"
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textview.MaterialTextView
+                android:visibility="invisible"
                 android:id="@+id/x"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -164,6 +165,7 @@ android:layout_margin="10dp"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+
                app:layout_constraintBottom_toTopOf="@+id/tv_new_user_signup"/>
 
             <com.google.android.material.textview.MaterialTextView
@@ -186,9 +188,10 @@ android:layout_margin="10dp"
                 android:textSize="12sp"
 
 
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+               />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
