--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -60,11 +60,9 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:fillViewport="true">
-     <LinearLayout
+     <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-
-         android:orientation="vertical"
 
          android:focusable="true"
          android:focusableInTouchMode="true">
@@ -79,6 +77,11 @@
              app:errorEnabled="true"
 
              android:id="@+id/til_first_name"
+
+
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toTopOf="parent"
              >
 
              <com.google.android.material.textfield.TextInputEditText
@@ -88,6 +91,10 @@
                  android:id="@+id/tiet_first_name"/>
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_first_name"
+
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -104,6 +111,9 @@
                  android:id="@+id/tiet_last_name"/>
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_last_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -122,6 +132,9 @@
          </com.google.android.material.textfield.TextInputLayout>
 
          <com.google.android.material.textfield.TextInputLayout
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -139,6 +152,9 @@
                  android:inputType="phone"/>
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_phone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -155,6 +171,9 @@
                  android:id="@+id/tiet_address" />
          </com.google.android.material.textfield.TextInputLayout>
          <RadioGroup
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_address"
              android:id="@+id/rg_user_type"
              android:checkedButton="@+id/r_user_type_seller"
              android:layout_width="match_parent"
@@ -165,7 +184,7 @@
                  android:id="@+id/r_user_type_seller"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                 android:text="@string/seller"
+                 android:text="@string/client"
                  android:buttonTint="@color/colorPrimary"
                  android:textSize="12sp"
                  />
@@ -173,13 +192,16 @@
                  android:id="@+id/r_user_type_buyer"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                 android:text="@string/buyer"
+                 android:text="@string/agent"
                  android:buttonTint="@color/colorPrimary"
                  android:textSize="12sp"/>
          </RadioGroup>
 
 
          <com.google.android.material.textfield.TextInputLayout
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/rg_user_type"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -197,6 +219,10 @@
          </com.google.android.material.textfield.TextInputLayout>
 
          <com.google.android.material.textfield.TextInputLayout
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_user_name"
+
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
 
@@ -222,8 +248,11 @@
          </com.google.android.material.textfield.TextInputLayout>
 
          <com.google.android.material.button.MaterialButton
+
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/til_password"
              android:id="@+id/bt_signup"
-             android:layout_width="match_parent"
+             android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/signup"
              android:textAllCaps="false"
@@ -231,7 +260,7 @@
 
              android:layout_margin="10dp"/>
 
-     </LinearLayout>
+     </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
